# post_link_finder

./: .env.example  README.md  fragmentor.py  pyproject.toml
coletas_de_teste/: INCENDIO_IG_mapped.csv
src/: fragmentor.py  searcher.py  utils.py
src/client/: formatter.py  fragmentor.py  searcher.py
src/search_engines/: google_custom_search.py  google_lib_search.py
src/social_network/: social_network.py
src/utils/: utils.py
